--- a/Cervan_Renz_MirandaSousa_19-660-018.Rmd
+++ b/Cervan_Renz_MirandaSousa_19-660-018.Rmd
@@ -681,42 +681,61 @@ To improve the model, various measures could be considered. One approach would b
 
 ```{r Poisson_Model, cache=TRUE}
 
-#Data preparation: Aggregate the number of claims per combination of vehicle type, insurance type, and production year
+#Data preparation: Aggregate the number of claims per combination 
 dat_amount_claims <- clean_dat_motor %>%
-  group_by(SEX, TYPE_VEHICLE, INSR_TYPE, MAKE, AGE_VEHICLE, SEATS_NUM) %>%
+  group_by(SEX, INSR_TYPE, USAGE, TYPE_VEHICLE, MAKE, AGE_VEHICLE, SEATS_NUM, CCM_TON, INSURED_VALUE, PREMIUM) %>%
   summarise(Amount_Claims = sum(CLAIM_PAID == "YES"), .groups = 'drop')
 
-hist(dat_amount_claims$Amount_Claims, breaks=100)
+
+hist(dat_amount_claims$Amount_Claims, breaks=2)
 
 mean(dat_amount_claims$Amount_Claims) # calculate mean
 var(dat_amount_claims$Amount_Claims)
 #The variance is much greater than the mean, which suggests that we will have over-dispersion in the model.
 
 #Poisson Regression:
-poisson_model<- glm(Amount_Claims ~ SEX + TYPE_VEHICLE + INSR_TYPE + MAKE + AGE_VEHICLE + SEATS_NUM, 
+poisson_model<- glm(Amount_Claims ~ SEX + INSR_TYPE + TYPE_VEHICLE +  MAKE +
+                      AGE_VEHICLE + SEATS_NUM + CCM_TON + INSURED_VALUE + PREMIUM,
                       family = poisson(link = "log"), data = dat_amount_claims)
 
 #Summary of the model
 summary(poisson_model)
+with(poisson_model, cbind(res.deviace = deviance, df= df.residual, p = pchisq(deviance, df= df.residual, lower.tail = F)))
+
+
 
 #Coeff
 coef(poisson_model)
 exp(coef(poisson_model))
 
-# Model diagnostics and evaluation
-# Residuals vs. Fitted Plot
-plot(poisson_model$fitted.values, residuals(poisson_model, type = "deviance"),
-     xlab = "Fitted Values", 
-     ylab = "Deviance Residuals", 
-     main = "Residuals vs Fitted")
-abline(h = 0, col = "red")
-
-# QQ Plot of residuals (Check for normal distribution)
-qqnorm(residuals(poisson_model, type = "deviance"), main = "QQ Plot of Residuals")
-qqline(residuals(poisson_model, type = "deviance"), col = "red")
 
 #Diagnose overdispersion
 deviance(poisson_model) / df.residual(poisson_model)
+
+
+
+
+
+#neu
+#Devianz
+#Berechne p-Wert f?r H0: Das Modell beschreibt die Daten ad?quat:
+deviance(poisson_model) #D
+## [1] 1040
+df.residual(poisson_model) #n - (m + 1)
+#[1] 47
+1 - pchisq(deviance(poisson_model), df.residual(poisson_model))
+#Falls D > (n - (m + 1)), dann ist das Modell ungen?gend
+
+#Poisson: Inferenz
+#Signifikanztest der einzelnen Parameter
+printCoefmat(summary(poisson_model)$coefficients[1:3,], signif.legend= FALSE)
+
+
+#Wald Vertrauensintervall
+#Poisson
+coef(poisson_model)["F"]
+c(-1, 1) * qnorm(1 - 0.95/2) * summary(poisson_model)$coefficients["F", "Std. Error"]
+
 
 
 ```
